--- a/directConsultas/package.json
+++ b/directConsultas/package.json
@@ -15,8 +15,7 @@
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
-    "cordova-plugin-geolocation",
-    "org.apache.cordova.statusbar"
+    "cordova-plugin-geolocation"
   ],
   "cordovaPlatforms": [
     "ios"
